fix misalignment in moderator picks on OSX

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -389,7 +389,7 @@ padding: 0;
 
 #featuredItemsCarousel #innerContent ul li {
     height: 230px;
-    width: 223px;
+    width: 224px;
     padding: 0 10px;
     background: url(../images/featured_separator.png) right center no-repeat;
     float: left;
